# python-helloworld

./: .gitignore  .replit  Jenkinsfile  LICENSE  MANIFEST.in  README  README.md  VERSION.txt  hello-python.py  helloworld.py  pipeline.yaml  pyproject.toml  setup.py
.cache/v/cache/: lastfailed
helloworld/: __init__.py  main.py
